# sql-critic

./: .gitignore  Dockerfile  Makefile  README.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sqlcritic/: action.py  analyze.py  collector.py  comparison.py  github.py  notify.py  storage.py  trace.py  utils.py
sqlcritic/database/: __init__.py  postgres.py  types.py
tests/: conftest.py  test_action.py  test_analyze.py  test_collector.py  test_comparison.py  test_database.py  test_github.py  test_notify.py  test_query_explainer.py  test_storage.py
tests/cassettes/test_github/: test_commit_pulls.yaml  test_pull.yaml  test_pull_comment.yaml
tests/cassettes/test_storage/: test_get_missing.yaml  test_put_get.yaml
tests/fixtures/: test-explained.json  test-spans-base.json  test-spans.json
