[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlcritic"
version = "0.3.0"
description = "Capture and analyze SQL queries made during a run of your app's test suite"
readme = "README.md"
authors = [{ name = "Scott Nelson", email = "scott@scottnelson.co" }]
dependencies = [
  "boto3",
  "opentelemetry-api>=1.11",
  "opentelemetry-sdk>=1.11",
  "PyGithub",
  "psycopg2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "black", "isort",
  "pytest", "pytest-cov", "pytest-mock", "vcrpy",
  "mypy", "types-python-dateutil", "types-psycopg2", "types-boto3",
]

[tool.pytest.ini_options]
addopts = "--cov=sqlcritic --cov-report=html --cov-report=term-missing"
pythonpath = ["."]

[tool.isort]
profile = "black"